--- a/promptbook/fixtures/init_data.yaml
+++ b/promptbook/fixtures/init_data.yaml
@@ -84,6 +84,7 @@
   pk: 1
   fields:
     category: 1
+    owner: 1
     created_at: 2023-01-01 00:00
     modified_at: 2023-01-01 00:00
     text: |
@@ -95,6 +96,7 @@
   pk: 2
   fields:
     category: 1
+    owner: 1
     created_at: 2023-01-01 00:00
     modified_at: 2023-01-01 00:00
     text: |
@@ -106,6 +108,7 @@
   pk: 3
   fields:
     category: 1
+    owner: 1
     created_at: 2023-01-01 00:00
     modified_at: 2023-01-01 00:00
     text: |
@@ -118,6 +121,7 @@
   pk: 4
   fields:
     category: 2
+    owner: 1
     created_at: 2023-01-01 00:00
     modified_at: 2023-01-01 00:00
     text: |
@@ -130,6 +134,7 @@
   pk: 5
   fields:
     category: 3
+    owner: 1
     created_at: 2023-01-01 00:00
     modified_at: 2023-01-01 00:00
     text: |
@@ -140,6 +145,7 @@
   pk: 6
   fields:
     category: 3
+    owner: 1
     created_at: 2023-01-01 00:00
     modified_at: 2023-01-01 00:00
     text: |
@@ -151,6 +157,7 @@
   pk: 7
   fields:
     category: 3
+    owner: 1
     created_at: 2023-01-01 00:00
     modified_at: 2023-01-01 00:00
     text: |
