fix: add proper DNS server name

--- a/config/nginx/conf.d/local.conf
+++ b/config/nginx/conf.d/local.conf
@@ -9,7 +9,7 @@ upstream vidura_server {
 server {
 
     listen 80;
-    server_name vidura.ai;
+    server_name cloud.vidura.ai;
 
     location / {
         # everything is passed to Gunicorn
