fix: add rights title to conf

--- a/config/nginx/conf.d/local.conf
+++ b/config/nginx/conf.d/local.conf
@@ -1,3 +1,5 @@
+# All rights reserved @ happy-pythonist.com
+
 # first we declare our upstream server, which is our Gunicorn application
 upstream vidura_server {
     # docker will automatically resolve this to the correct address
