--- a/config/nginx/conf.d/local.conf
+++ b/config/nginx/conf.d/local.conf
@@ -14,6 +14,7 @@ server {
     server_name cloud.vidura.ai;
 
     location / {
+        proxy_set_header X-Forwarded-Proto $scheme;
         # everything is passed to Gunicorn
         proxy_pass http://vidura_server;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
