fix: change nginx to ssl

--- a/config/nginx/conf.d/local.conf
+++ b/config/nginx/conf.d/local.conf
@@ -10,7 +10,7 @@ upstream vidura_server {
 # now we declare our main server
 server {
 
-    listen 80;
+    listen 443 ssl;
     server_name cloud.vidura.ai;
 
     location / {
