--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,32 @@
-django==4.1.7
-pyyaml==6.0.0
-gunicorn==20.1.0
-uvicorn==0.21.1
+asgiref==3.6.0
+backports.zoneinfo==0.2.1
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+cryptography==40.0.1
+defusedxml==0.7.1
+Django==4.2
 django-activity-stream==1.4.2
-pillow==9.5.0
-psycopg2-binary==2.9.6
 django-allauth==0.54.0
+django-filter==23.1
+djangorestframework==3.14.0
+gunicorn==20.1.0
+h11==0.14.0
+idna==3.4
+importlib-metadata==6.3.0
+Markdown==3.4.3
+oauthlib==3.2.2
+Pillow==9.5.0
+psycopg2-binary==2.9.6
+pycparser==2.21
+PyJWT==2.6.0
+python3-openid==3.2.0
+pytz==2023.3
+PyYAML==6.0
+requests==2.28.2
+requests-oauthlib==1.3.1
+sqlparse==0.4.3
+urllib3==1.26.15
+uvicorn==0.21.1
+zipp==3.15.0
